--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chengsokdara/use-whisper",
-  "version": "0.2.0",
+  "version": "0.3.0-bk",
   "description": "React Hook for OpenAI Whisper API with speech recorder and silence removal built-in.",
   "keywords": [
     "react",
